--- a/assets/src/styles/profile.scss
+++ b/assets/src/styles/profile.scss
@@ -226,3 +226,32 @@ $light: #eee;
 .post-comment-list .head button {
   background: transparent;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.modal {
+  position: relative;
+  padding: 15px;
+  background-color: rgb(200, 200, 200);
+
+  .footer {
+    display: flex;
+  }
+
+  .footer button:first-of-type {
+    margin-left: auto;
+  }
+}
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
