Refactors code for making home page nav

--- a/assets/src/templates/index.ejs
+++ b/assets/src/templates/index.ejs
@@ -1,13 +1,8 @@
 <%- include('_header') %>
 <h1>Room of Cats!</h1>
 <h2>Another room of cats!</h2>
-<nav id="logged-out-nav">
-  <a href="/public/register.html">Register</a>
-  <a href="/public/login.html">Login</a>
-</nav>
-<nav id="logged-in-nav">
-  <a href="/public/profile.html">Profile</a>
-</nav>
+
+<nav id="homepage-nav"></nav>
 
 <script src="/public/scripts/home.bundle.js"></script>
 
