--- a/assets/src/styles/profile.scss
+++ b/assets/src/styles/profile.scss
@@ -107,9 +107,8 @@
   border-bottom: none;
 }
 
-.edit-button {
-  margin-left: auto;
-  margin-right: 0.25rem;
+.edit-button,
+.delete-button {
   color: white;
   background-color: #111;
   background-size: cover;
@@ -117,6 +116,14 @@
   overflow: hidden;
   border: none;
   cursor: pointer;
+}
+
+.edit-button {
+  margin-left: auto;
+  margin-right: 0.25rem;
+}
+
+.delete-button {
 }
 
 .edit--image-section {
