1. Improves UX for comment list - always have list in document but only give border if not empty 2. Fixes UX of comment deletion, giving feedback and closing modal, and removing element only if successful 3. Fixes minor (but crucial) bug in backend in SQL query meant for comment deletion

--- a/assets/src/styles/profile.scss
+++ b/assets/src/styles/profile.scss
@@ -206,6 +206,9 @@
 .post-comment-list {
   border: $stdBorder;
   border-radius: 1px;
+  &:empty {
+    border: none;
+  }
 
   .head {
     margin: 0;
