Fixes padding in post-control element

--- a/assets/src/styles/profile.scss
+++ b/assets/src/styles/profile.scss
@@ -116,7 +116,7 @@
 .post-control {
   background-color: aquamarine;
   display: flex;
-  padding: 0.25rem 0;
+  padding: 0.25rem 0.25rem;
   border: 1px solid rgb(86, 119, 109);
   border-bottom: none;
 }
